[metadata]
name = Package canonical middleware Django
version = attr: package-canonical-middleware-django.__version__
description = Cannonical middleware django
long_description = file: README.md
url = https://github.com/Planplan-io/package-canonical-middleware-django
author = Planplan
author_email = coucou@planplan.io
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage

[flake8]
exclude = venv,migrations
ignore = E203,W503
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *package-canonical-middleware-django*
